Fix four bugs
- Category excerpt too long.
- Fix missing arrows to new reply bug.
- Clear editor text.
- Hide collapse button.

And tweak Read more... color.

--- a/client/app/debiki-play.styl
+++ b/client/app/debiki-play.styl
@@ -79,7 +79,7 @@ del
   font-style: italic;
   letter-spacing: 0.3ex;
   background: #fff;
-  color: hsl(211, 45%, 40%);
+  color: hsl(211, 20%, 50%);
 
 .dw-ts-squashed
   .dw-x-show
